Segfault on Undo of Sculpted object in hidden Layer #56331

Closed
opened 2018-08-12 07:55:52 +02:00 by Jaggz H · 5 comments

Linux, Debian (Stretch)
Linux: 2.79.6 git build, c19ddcc975
Worked: No clue

^Z causes a segfault.

  • Fresh default blend
  • Enter sculpt mode on cube
  • Modify cube with sculpt tool
  • Shift-LMB on layer 2, then on layer 1, to show 2 and hide 1.

Hit ^Z

Blender 2.79 (sub 6), Commit date: 2018-08-10 00:08, Hash c19ddcc975

bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='SMOOTH') # Operator
bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='SMOOTH') # Operator
bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='DRAW') # Operator
bpy.ops.view3d.layers(nr=2, extend=True) # Operator

backtrace

/home/jaggz/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x1d) [0x55cd4b8f553d]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10c0db9) [0x55cd4aecadb9]
/lib/x86_64-linux-gnu/libc.so.6(+0x33060) [0x7f22c02e5060]
/home/jaggz/blender-git/build_linux/bin/blender(+0x13f9b5f) [0x55cd4b203b5f]
/home/jaggz/blender-git/build_linux/bin/blender(BKE_undosys_step_undo_with_data_ex+0x8d) [0x55cd4b73f08d]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10e6917) [0x55cd4aef0917]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10c6543) [0x55cd4aed0543]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10c77e5) [0x55cd4aed17e5]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10c7c1b) [0x55cd4aed1c1b]
/home/jaggz/blender-git/build_linux/bin/blender(+0x10c81ec) [0x55cd4aed21ec]
/home/jaggz/blender-git/build_linux/bin/blender(wm_event_do_handlers+0x6f7) [0x55cd4aed2d37]
/home/jaggz/blender-git/build_linux/bin/blender(WM_main+0x20) [0x55cd4aecb6f0]
/home/jaggz/blender-git/build_linux/bin/blender(main+0x3fc) [0x55cd4ae858bc]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf1) [0x7f22c02d22e1]
/home/jaggz/blender-git/build_linux/bin/blender(_start+0x2a) [0x55cd4aec772a]

Linux, Debian (Stretch) Linux: 2.79.6 git build, c19ddcc975f Worked: No clue ^Z causes a segfault. - Fresh default blend - Enter sculpt mode on cube - Modify cube with sculpt tool - Shift-LMB on layer 2, then on layer 1, to show 2 and hide 1. # Hit ^Z # Blender 2.79 (sub 6), Commit date: 2018-08-10 00:08, Hash c19ddcc975f bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='SMOOTH') # Operator bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='SMOOTH') # Operator bpy.ops.paint.brush_select(paint_mode='SCULPT', sculpt_tool='DRAW') # Operator bpy.ops.view3d.layers(nr=2, extend=True) # Operator # backtrace /home/jaggz/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x1d) [0x55cd4b8f553d] /home/jaggz/blender-git/build_linux/bin/blender(+0x10c0db9) [0x55cd4aecadb9] /lib/x86_64-linux-gnu/libc.so.6(+0x33060) [0x7f22c02e5060] /home/jaggz/blender-git/build_linux/bin/blender(+0x13f9b5f) [0x55cd4b203b5f] /home/jaggz/blender-git/build_linux/bin/blender(BKE_undosys_step_undo_with_data_ex+0x8d) [0x55cd4b73f08d] /home/jaggz/blender-git/build_linux/bin/blender(+0x10e6917) [0x55cd4aef0917] /home/jaggz/blender-git/build_linux/bin/blender(+0x10c6543) [0x55cd4aed0543] /home/jaggz/blender-git/build_linux/bin/blender(+0x10c77e5) [0x55cd4aed17e5] /home/jaggz/blender-git/build_linux/bin/blender(+0x10c7c1b) [0x55cd4aed1c1b] /home/jaggz/blender-git/build_linux/bin/blender(+0x10c81ec) [0x55cd4aed21ec] /home/jaggz/blender-git/build_linux/bin/blender(wm_event_do_handlers+0x6f7) [0x55cd4aed2d37] /home/jaggz/blender-git/build_linux/bin/blender(WM_main+0x20) [0x55cd4aecb6f0] /home/jaggz/blender-git/build_linux/bin/blender(main+0x3fc) [0x55cd4ae858bc] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf1) [0x7f22c02d22e1] /home/jaggz/blender-git/build_linux/bin/blender(_start+0x2a) [0x55cd4aec772a]
Author

Added subscriber: @jaggz

Added subscriber: @jaggz

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-08-12 13:15:43 +02:00

@ideasman42 guess it’s another weird case that needs some care in new undo stack system…

Asserts on BLI_assert failed: /home/i74700deb64/blender/__work__/src/source/blender/editors/sculpt_paint/sculpt_undo.c:1043, sculpt_undosys_step_decode(), at 'sculpt_undosys_poll(C)'

@ideasman42 guess it’s another weird case that needs some care in new undo stack system… Asserts on `BLI_assert failed: /home/i74700deb64/blender/__work__/src/source/blender/editors/sculpt_paint/sculpt_undo.c:1043, sculpt_undosys_step_decode(), at 'sculpt_undosys_poll(C)'`

This issue was referenced by f32dfd0819

This issue was referenced by f32dfd0819fe871a3ec2efdac573c060537e7150

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56331
No description provided.