Fix T56331: Undo crash w/ sculpt on hidden layer